# papyrus-compiler

./: .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  compilerExplorer.yml  mdBook.yml  rust.yml
.run/: Benchmark (All).run.xml  Benchmark (Lexer).run.xml  Benchmark (Parser).run.xml  Build WASM Project.run.xml  Compiler Explorer.run.xml  Generate WASM bindings.run.xml  Heap Profiling (Parser).run.xml  Run CLI.run.xml  Start Compiler Explorer.run.xml  Test (All).run.xml  Test (Lexer).run.xml  Test (Parser).run.xml  cargo-deny.run.xml  mdBook.run.xml
cli/: Cargo.toml
cli/src/: cache.rs  main.rs
compiler-explorer/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
compiler-explorer/public/: static.json
compiler-explorer/src/: index.tsx
compiler-explorer/src/components/: App.tsx
compiler-explorer/src/components/CodeEditor/: CodeEditor.module.css  index.tsx
compiler-explorer/src/hooks/: useZoom.ts
compiler-explorer/src/language/: monarch.ts
compiler-explorer/src/wasm/: papyrus_compiler_wasm.d.ts  papyrus_compiler_wasm.js  papyrus_compiler_wasm_bg.wasm  papyrus_compiler_wasm_bg.wasm.d.ts
core/: Cargo.toml
core/src/: cache.rs  error.rs  lib.rs  source.rs
diagnostics/: Cargo.toml
diagnostics/src/: ariadne_support.rs  lib.rs
docs/: book.toml  papyrus.min.js
docs/src/: SUMMARY.md  introduction.md
docs/src/Compiler_Reference/: Compiler_Terminology.md  Lexer_Diagnostics.md  Parser_Diagnostics.md
docs/src/Compiler_Reference/Diagnostics/: Lexer_Diagnostics.md  Parser_Diagnostics.md  index.md
docs/src/Compiler_Reference/Optimizations/: Constant_Folding.md  Constant_Propagation.md  Expression_Simplification.md  Function_Inlining.md  index.md
lexer/: Cargo.toml
lexer/benches/: lexer_benchmark.rs
lexer/src/: lexer_diagnostics.rs  lib.rs
lexer/src/syntax/: keyword_kind.rs  mod.rs  operator_kind.rs  token.rs
parser/: Cargo.toml
parser/benches/: parser_benchmark.rs
parser/src/: ast.rs  error.rs  lib.rs  parse.rs  parser.rs  parser_diagnostics.rs  parser_error.rs  span.rs
parser/src/ast/: event.rs  expression.rs  flags.rs  function.rs  identifier.rs  literal.rs  mod.rs  node.rs  property.rs  script.rs  state.rs  statement.rs  structure.rs  types.rs  variable.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
