[package]
name = "papyrus_compiler_cli"
version = "0.1.0"
edition = "2021"
authors = ["erri120 <erri120@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/erri120/papyrus-compiler"
homepage = "https://erri120.github.io/papyrus-compiler/"

[dependencies.papyrus_compiler_core]
path = "../core"

[dependencies.papyrus_compiler_diagnostics]
path = "../diagnostics"
features = ["ariadne-support"]

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["derive"] }
ariadne = "0.1.5"