[package]
name = "papyrus_compiler_core"
version = "0.1.0"
edition = "2021"
authors = ["erri120 <erri120@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/erri120/papyrus-compiler"
homepage = "https://erri120.github.io/papyrus-compiler/"

[dependencies.papyrus_compiler_lexer]
path = "../lexer"

[dependencies.papyrus_compiler_parser]
path = "../parser"

[dependencies.papyrus_compiler_diagnostics]
path = "../diagnostics"

[dependencies]
anyhow = "1.0.57"
ariadne = "0.1.5"