[package]
name = "papyrus_compiler_parser"
version = "0.1.0"
edition = "2021"
authors = ["erri120 <erri120@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/erri120/papyrus-compiler"
homepage = "https://erri120.github.io/papyrus-compiler/"

[features]
test-external-scripts = []
dhat-heap = []

[dependencies.papyrus_compiler_lexer]
path = "../lexer"

[dependencies.papyrus_compiler_diagnostics]
path = "../diagnostics"

[dev-dependencies]
criterion = "0.4.0"
dhat = "0.3.0"

[[bench]]
name = "parser_benchmark"
harness = false