[package]
name = "papyrus_compiler_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.papyrus_compiler_lexer]
path = "../lexer"

[dependencies.papyrus_compiler_parser]
path = "../parser"

[dependencies.papyrus_compiler_core]
path = "../core"

[dependencies]
wasm-bindgen = "0.2.81"