[package]
name = "papyrus_compiler_wasm"
version = "0.1.0"
edition = "2021"
authors = ["erri120 <erri120@protonmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/erri120/papyrus-compiler"
homepage = "https://erri120.github.io/papyrus-compiler/"

[lib]
crate-type = ["cdylib"]

[dependencies.papyrus_compiler_core]
path = "../core"

[dependencies.papyrus_compiler_diagnostics]
path = "../diagnostics"

[dependencies]
wasm-bindgen = "0.2.82"